--- a/calculator.html
+++ b/calculator.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculateur RSE</title>
     <link rel="stylesheet" href="css/calculator.css">
+    <link rel="icon" href="img/logoAct4change.webp">
+
 </head>
 <body>
 
