--- a/expertise.html
+++ b/expertise.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Orange</title>
     <link rel="stylesheet" href="styleIndex.css">
+    <link rel="icon" href="img/logoAct4change.webp">
 </head>
 <body>
 <nav>
