--- a/calculator.html
+++ b/calculator.html
@@ -17,6 +17,7 @@
            <a href="index.html"> <img alt="orange" src="img/logoAct4change.webp" style="width: 160px; margin-right: 20px;"></a>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="expertise.html">Expertise</a></li>
+            <li><a href="offres.html">Offres</a> </li>
             <li><a href="calculator.html">Calculez son RSE</a></li>
         </div>
         <li style="display: flex; align-items: center;">
