--- a/expertise.html
+++ b/expertise.html
@@ -22,8 +22,60 @@
         </li>
     </ul>
 </nav>
-<section id="home">
+<section id="home" class="cards-container">
+    <div class="card">
+        <h2>Secteur Environnemental 🌍</h2>
+        <ul>
+            <li>Gestion des ressources naturelles : Réduction de l’empreinte carbone, gestion durable de l’eau, et utilisation des énergies renouvelables.</li>
+            <li>Réduction des déchets : Économie circulaire, recyclage et valorisation des déchets.</li>
+            <li>Biodiversité : Protection des écosystèmes et adoption de pratiques respectueuses de la nature.</li>
+        </ul>
+    </div>
 
+    <div class="card">
+        <h2>Secteur Social 🤝</h2>
+        <ul>
+            <li>Conditions de travail : Bien-être des employés, santé et sécurité au travail.</li>
+            <li>Inclusion et diversité : Promotion de l'égalité des chances (genre, handicap, origine).</li>
+            <li>Formation et développement : Investissement dans les compétences et l’éducation des employés.</li>
+            <li>Engagement communautaire : Soutien aux initiatives locales et programmes d’impact social.</li>
+        </ul>
+    </div>
+
+    <div class="card">
+        <h2>Secteur Économique et Gouvernance 📊</h2>
+        <ul>
+            <li>Éthique des affaires : Lutte contre la corruption et les pratiques frauduleuses.</li>
+            <li>Transparence : Communication ouverte et fiable sur les activités de l’entreprise.</li>
+            <li>Relations avec les parties prenantes : Collaboration avec clients, fournisseurs et investisseurs pour un impact durable.</li>
+            <li>Achat responsable : Favoriser les fournisseurs éthiques et locaux.</li>
+        </ul>
+    </div>
+
+    <div class="card">
+        <h2>Secteur Technologique 📱</h2>
+        <ul>
+            <li>Numérique durable : Développement de solutions écoresponsables (cloud, IoT, etc.).</li>
+            <li>Accessibilité : Technologies inclusives pour les personnes en situation de handicap.</li>
+            <li>Cybersécurité et confidentialité : Respect des données personnelles.</li>
+        </ul>
+    </div>
+
+    <div class="card">
+        <h2>Secteur Industriel et Logistique 🚚</h2>
+        <ul>
+            <li>Optimisation des chaînes d'approvisionnement : Réduction des émissions liées au transport et collaboration avec des partenaires engagés.</li>
+            <li>Production durable : Conception de produits éco-conçus et optimisation énergétique des usines.</li>
+        </ul>
+    </div>
+
+    <div class="card">
+        <h2>Secteur Éducatif et Sensibilisation 📚</h2>
+        <ul>
+            <li>Formation interne : Sensibilisation des collaborateurs aux pratiques responsables.</li>
+            <li>Communication externe : Campagnes pour éduquer les consommateurs sur les produits durables.</li>
+        </ul>
+    </div>
 </section>
 <section id="footer">
     <footer>
