--- a/offres.html
+++ b/offres.html
@@ -22,39 +22,49 @@
         </li>
     </ul>
 </nav>
-<section id="home">
-    <h2>Notre approche : Un service complet et personnalisé</h2>
-    <p>Nous proposons une gamme de services pour aider les PME à intégrer des normes de responsabilité sociétale et de gestion environnementale dans leurs activités.</p>
+<section id="home" class="cards-container">
 
-    <h3>Mise en relation avec des experts certifiés :</h3>
-    <ul>
-        <li>Sélection de consultants spécialisés dans la RSE et la gestion environnementale.</li>
-        <li>Partenariat avec des auditeurs accrédités.</li>
-    </ul>
+<h2>Notre approche : Un service complet et personnalisé 😊</h2>
+<p>Nous proposons une gamme de services pour aider les PME à intégrer des normes de responsabilité sociétale et de gestion environnementale dans leurs activités. 🌱</p>
 
-    <h3>Consulting et audit RSE :</h3>
-    <ul>
-        <li>Diagnostic des pratiques actuelles pour identifier les axes d’amélioration.</li>
-        <li>Élaboration d’un plan d’action conforme aux exigences des normes ISO 26000 et 14001.</li>
-    </ul>
+<div class="card">
+<h3>Mise en relation avec des experts certifiés 👨‍🏫 :</h3>
+<ul>
+    <li>Sélection de consultants spécialisés dans la RSE et la gestion environnementale. 🌍</li>
+    <li>Partenariat avec des auditeurs accrédités. 📜</li>
+</ul>
+</div>
 
-    <h3>Établissement de rapports RSE :</h3>
-    <ul>
-        <li>Création de documents officiels selon les standards internationaux.</li>
-        <li>Présentation des résultats avec des indicateurs clés pour assurer la transparence.</li>
-    </ul>
+<div class="card">
+<h3>Consulting et audit RSE 🕵️‍♂️ :</h3>
+<ul>
+    <li>Diagnostic des pratiques actuelles pour identifier les axes d’amélioration. 🔍</li>
+    <li>Élaboration d’un plan d’action conforme aux exigences des normes ISO 26000 et 14001. 📋</li>
+</ul>
+</div>
 
-    <h3>Organisation de journées et événements dédiés :</h3>
-    <ul>
-        <li>Ateliers en présentiel pour former vos équipes aux pratiques RSE et environnementales.</li>
-        <li>Journées de simulation d’audit pour garantir votre préparation.</li>
-    </ul>
+<div class="card">
+<h3>Établissement de rapports RSE 📊 :</h3>
+<ul>
+    <li>Création de documents officiels selon les standards internationaux. 🌐</li>
+    <li>Présentation des résultats avec des indicateurs clés pour assurer la transparence. 📈</li>
+</ul>
+</div>
+    <div class="card" style="margin: 0 auto; max-width: 600px;">
+        <h3>Organisation de journées et événements dédiés 📅 :</h3>
+        <ul>
+            <li>Ateliers en présentiel pour former vos équipes aux pratiques RSE et environnementales. 🏫</li>
+            <li>Journées de simulation d’audit pour garantir votre préparation. 📝</li>
+        </ul>
+    </div>
 
-    <h3>Vente de services complémentaires :</h3>
-    <ul>
-        <li>Formations personnalisées en gestion durable.</li>
-        <li>Accompagnement dans le déploiement de politiques RSE internes.</li>
-    </ul>
+    <div class="card" style="margin: 0 auto; max-width: 600px;">
+        <h3>Vente de services complémentaires 🛒 :</h3>
+        <ul>
+            <li>Formations personnalisées en gestion durable. 📚</li>
+            <li>Accompagnement dans le déploiement de politiques RSE internes. 🏢</li>
+        </ul>
+    </div>
 
 </section>
 <section id="footer">
