--- a/connexion.html
+++ b/connexion.html
@@ -7,53 +7,56 @@
     <link rel="icon" href="img/logoAct4change.webp">
     <link href="styleIndex.css" rel="stylesheet">
     <style>
-        #chartsContainer {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            gap: 20px;
-            padding: 20px;
-            flex-wrap: wrap;
-        }
+        @media (max-width: 809px) {
+            #chartsContainer {
+                display: flex;
+                justify-content: center;
+                align-items: flex-start;
+                gap: 20px;
+                padding: 20px;
+                flex-wrap: wrap;
+            }
 
-        .chart-wrapper {
-            width: 150px;
-            height: 200px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
+            .chart-wrapper {
+                width: 150px;
+                height: 200px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+            }
 
-        .chart-title {
-            font-size: 14px;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
+            .chart-title {
+                font-size: 14px;
+                font-weight: bold;
+                margin-bottom: 10px;
+            }
 
-        canvas {
-            display: block;
-            width: 100%;
-            height: auto;
-        }
+            canvas {
+                display: block;
+                width: 100%;
+                height: auto;
+            }
 
-        #output {
-            text-align: center;
-            font-size: 2em;
-            font-weight: bold;
-            margin-bottom: 0;
-            padding-bottom: 0;
-        }
+            #output {
+                text-align: center;
+                font-size: 2em;
+                font-weight: bold;
+                margin-bottom: 0;
+                padding-bottom: 0;
+            }
 
-        #gaugeContainer {
-            text-align: center;
-            margin-top: -10px;
-            padding-top: 0;
-        }
-        #img {
-            width: 350px;
-            margin-right: 20px;
+            #gaugeContainer {
+                text-align: center;
+                margin-top: -10px;
+                padding-top: 0;
+            }
+
+            #img {
+                width: 350px;
+                margin-right: 20px;
+            }
         }
     </style>
 </head>
