--- a/connexion.html
+++ b/connexion.html
@@ -13,7 +13,7 @@
 <nav>
     <ul style="display: flex; justify-content: space-between; width: 100%; margin-top: 20px; align-items: center;">
         <div style="display: flex; align-items: center;">
-            <a href="index.html"><img alt="orange" src="img/logoAct4change.webp" style="width: 160px; margin-right: 20px;"></a>
+            <a href="index.html"> <img alt="orange" src="img/logoAct4change.webp" style="width: 160px; margin-right: 20px;"></a>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="expertise.html">Expertise</a></li>
             <li><a href="offres.html">Offres</a> </li>
@@ -40,6 +40,42 @@
         &#8679;
     </a>
 </section>
+
+
+<section id="footer">
+    <footer>
+        <h2>Contacts</h2>
+        <div class="contact">
+            <div>
+                <p>Florimon :</p>
+                <a href="https://www.linkedin.com/in/florimon-faure-9790a931a/?originalSubdomain=fr">LinkedIn</a>
+            </div>
+            <div>
+                <p>Wayan :</p>
+                <a href="https://www.linkedin.com/in/wayan-poulet-976486206/?originalSubdomain=fr">LinkedIn</a>
+            </div>
+            <div>
+                <p>Aude :</p>
+                <a href="https://www.linkedin.com/in/aude-gauthereau-455b41213/">LinkedIn</a>
+            </div>
+            <div>
+                <p>Noam :</p>
+                <a href="https://www.linkedin.com/in/noam-baroukh-b40738300/">LinkedIn</a>
+            </div>
+            <div>
+                <p>Dan :</p>
+                <a href="https://www.linkedin.com/in/dan-bitton-58a50b264/">LinkedIn</a>
+            </div>
+        </div>
+    </footer>
+
+</section>
+
+
+
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="js/calculator.js"></script>
 
