--- a/connexion.html
+++ b/connexion.html
@@ -13,7 +13,7 @@
 <nav>
     <ul style="display: flex; justify-content: space-between; width: 100%; margin-top: 20px; align-items: center;">
         <div style="display: flex; align-items: center;">
-            <a href="index.html"> <img alt="orange" src="img/logoAct4change.webp" style="width: 160px; margin-right: 20px;"></a>
+            <img alt="orange" src="img/logoAct4change.webp" style="width: 160px; margin-right: 20px;">
             <li><a href="index.html">Accueil</a></li>
             <li><a href="expertise.html">Expertise</a></li>
             <li><a href="offres.html">Offres</a> </li>
