ajout du sponsor et de l'entreprise

--- a/offres.html
+++ b/offres.html
@@ -92,6 +92,8 @@
                 <a href="https://www.linkedin.com/in/dan-bitton-58a50b264/">LinkedIn</a>
             </div>
         </div>
+        <br>
+        <p style="color: #e86b00">© 2024 ACT4CHANGE - by Orange</p>
     </footer>
 </section>
 </body>
