arrangement du style calculator dans le navbar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
         <div style="display: flex; align-items: center;">
             <img alt="orange" src="img/logoAct4change.webp" style="width: 160px; margin-right: 20px;">
             <li><a href="#home">Accueil</a></li>
-            <li><a href="calculator.html">Calculez son RSE</a></li>
+            <li><a href="calculator.html" style="background-color: #FF6600;
+            border-radius: 15px;
+            padding: 10px 20px;
+            text-decoration: none;
+            color: white;
+            display: inline-block;">Calculez son RSE</a></li>
             <li><a href="expertise.html">Expertise</a></li>
             <li><a href="offres.html">Offres</a> </li>
         </div>
