--- a/calculator.html
+++ b/calculator.html
@@ -16,7 +16,12 @@
         <div style="display: flex; align-items: center;">
            <a href="index.html"> <img alt="orange" src="img/logoAct4change.webp" style="width: 160px; margin-right: 20px;"></a>
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="calculator.html">Calculez son RSE</a></li>
+            <li><a href="calculator.html" style="background-color: #FF6600;
+            border-radius: 15px;
+            padding: 10px 20px;
+            text-decoration: none;
+            color: white;
+            display: inline-block;">Calculez son RSE</a></li>
             <li><a href="expertise.html">Expertise</a></li>
             <li><a href="offres.html">Offres</a> </li>
         </div>
