ajout du bouton de voir dans les stats leurs score global

--- a/calculator.html
+++ b/calculator.html
@@ -163,6 +163,17 @@
             <button onclick="calculerScoreGlobal()">Calculer le Score Global</button>
             <div id="result_global" class="result" style="display: none;"></div>
         </div>
+        <div style="text-align: center; margin-top: 20px;">
+            <a href="connexion.html" style="background-color: #FF6600;
+              border-radius: 15px;
+              padding: 10px 20px;
+              text-decoration: none;
+              color: white;
+              display: inline-block;">
+                Voir mes statistiques
+            </a>
+        </div>
+
     </div>
     <a href="#" class="scroll-to-top" id="scrollToTop">
         &#8679;
