arrangement de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <img src="img/carteOrange.jpg" alt="carte" style="margin-left: 20px; flex: 1;">
     </div>
 
+    <section id="objectif">
     <div style="display: flex; align-items: center; background-color: black; color: white;">
         <div style="flex: 1;">
             <h1>Notre objectif</h1>
@@ -61,7 +62,7 @@
         </div>
         <img alt="obj" src="img/objectifs.jpeg" style="margin-left: 20px; flex: 1;">
     </div>
-
+    </section>
     <div style="display: flex; align-items: center;">
         <img alt="rse" src="img/rsepres.webp" style="margin-right: 20px; flex: 1;">
         <div style="flex: 1;">
@@ -70,6 +71,7 @@
         </div>
     </div>
 
+    <section id="rse">
     <div style="display: flex; align-items: center; background-color: black; color: white;">
         <div style="flex: 1;">
             <h1>La RSE au cœur des PME</h1>
@@ -80,7 +82,7 @@
         </div>
         <img alt="pmerse" src="img/pmerse.png"  style="margin-left: 20px; flex: 1;">
     </div>
-
+    </section>
     <div style="display: flex; align-items: center;">
         <img alt="donnee" src="img/donnée.jpeg" style="margin-right: 20px; flex: 1;">
         <div style="flex: 1;">
